--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
-    "@tailwindcss/line-clamp": "^0.4.4"
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "tailwindcss-animated": "^1.1.2"
   },
   "scripts": {
-    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
+    "dev": "tailwindcss -i ./src/input.css -o ./src/output.css --watch",
+    "clean": "npm cache clean --force"
   }
 }
